# Pr_3sem

./: CMakeLists.txt  Cell.h  Config_Import.h  Grid.h  Life.h  gun.txt  main.cpp  main_copy.cpp  new_test_vis.cpp  test_color.cpp  test_vis.cpp
